[package]
name = "sessionizer"
version = "0.2.0"
edition = "2021"
rust-version = "1.75.0"
repository = "https://github.com/knutwalker/sessionizer"
authors = ["Paul Horn <developer@knutwalker.de>"]
description = "Tmux session manager"
license = "MIT OR Apache-2.0"
publish = true
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["tmux", "session", "sessionizer"]

[dependencies]
bytecount = "0.6.8"
fuzzy-select = "0.1.1"
home = "0.5.9"
ignore = "0.4.21"
indexmap = { version = "2.2.2", features = ["serde"] }
inquire = { version = "0.7.5", default-features = false, features = [
  "crossterm",
] }
onlyerror = "0.1.4"
panic-message = "0.3.0"
serde = "1.0.195"
shellexpand = { version = "3.1.0", features = ["full"] }
shlex = "1.2.0"
tempfile = "3.10.1"
toml = { version = "0.8.8", default-features = false, features = [
  "parse",
  "indexmap",
] }

[dependencies.kommandozeile]
version = "0.1.0"
default-features = false
features = [
  "clap_app_color",
  "clap_color",
  "clap_derive",
  "clap_verbose",
  "color-eyre",
  "setup_clap",
  "setup_color-eyre",
  "setup_tracing",
]

[build-dependencies]
rustc_version = "0.4.0"
time = { version = "0.3.36", features = ["formatting"] }

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
overflow-checks = true
rpath = false
strip = true

[lints.rust]
bad_style = "warn"
dead_code = "warn"
improper_ctypes = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
no_mangle_generic_items = "warn"
non_shorthand_field_patterns = "warn"
overflowing_literals = "warn"
path_statements = "warn"
patterns_in_fns_without_body = "warn"
private_bounds = "warn"
private_interfaces = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unconditional_recursion = "warn"
unsafe_code = "warn"
unused = { level = "warn", priority = -1 }
unused_allocation = "warn"
unused_comparisons = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_parens = "warn"
unused_qualifications = "warn"
unused_results = "warn"

[lints.clippy]
all = "warn"
cargo = "warn"
pedantic = "warn"
nursery = "warn"
multiple_crate_versions = { level = "allow", priority = 1 }
