[package]
name = "sessionizer"
version = "0.3.5"
edition = "2021"
rust-version = "1.75.0"
repository = "https://github.com/knutwalker/sessionizer"
authors = ["Paul Horn <developer@knutwalker.de>"]
description = "Tmux session manager"
license = "MIT OR Apache-2.0"
publish = true
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["tmux", "session", "sessionizer"]

[dependencies]
bytecount = "0.6.8"
clap = { version = "4.5.7", features = ["env"] }
color-eyre = { version = "0.6.3", features = ["issue-url"] }
concolor = { version = "0.1.1", features = [
  "api",
  "clicolor",
  "interactive",
  "no_color",
] }
fuzzy-select = "0.1.2"
home = "0.5.9"
ignore = "0.4.21"
inquire = { version = "0.7.5", default-features = false, features = [
  "crossterm",
] }
onlyerror = "0.1.4"
panic-message = "0.3.0"
serde = "1.0.195"
shlex = "1.2.0"
tempfile = "3.10.1"
toml = { version = "0.8.8", default-features = false, features = ["parse"] }
tracing = { version = "0.1.40", default-features = false, features = ["std"] }
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [] }
winnow = { version = "0.6.13", features = [] }

[build-dependencies]
rustc_version = "0.4.0"
time = { version = "0.3.36", features = ["formatting"] }

[profile.release]
codegen-units = 8
debug = false
debug-assertions = false
lto = 'thin'
opt-level = 3
overflow-checks = true
rpath = false
strip = true

[lints.rust]
bad_style = "warn"
dead_code = "warn"
improper_ctypes = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
no_mangle_generic_items = "warn"
non_shorthand_field_patterns = "warn"
overflowing_literals = "warn"
path_statements = "warn"
patterns_in_fns_without_body = "warn"
private_bounds = "warn"
private_interfaces = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unconditional_recursion = "warn"
unsafe_code = "warn"
unused = { level = "warn", priority = -1 }
unused_allocation = "warn"
unused_comparisons = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_parens = "warn"
unused_qualifications = "warn"
unused_results = "warn"

[lints.clippy]
all = "warn"
cargo = "warn"
pedantic = "warn"
nursery = "warn"
multiple_crate_versions = { level = "allow", priority = 1 }
